--- a/openshift/templates/springboot-pipeline.yaml
+++ b/openshift/templates/springboot-pipeline.yaml
@@ -19,10 +19,10 @@ parameters:
   displayName: Source Ref
   required: true
   value: develop
-- name: GIT_SOURCE_SECRET
-  description: The source Secret for the application
-  displayName: Source Secret
-  required: true
+- name: CONTEXT_DIR
+  description: Path within Git project to build; empty for root project directory.
+  displayName: Context Directory
+  required: false
 - description: Github trigger secret.  A difficult to guess string encoded as part of the webhook URL.  Not encrypted.
   displayName: GitHub Webhook Secret
   from: '[a-zA-Z0-9]{40}'
@@ -64,8 +64,7 @@ objects:
       git:
         uri: ${GIT_SOURCE_URL}
         ref: ${GIT_SOURCE_REF}
-      sourceSecret:
-        name: ${GIT_SOURCE_SECRET}
+      contextDir: ${CONTEXT_DIR}
     strategy:
       jenkinsPipelineStrategy:
         jenkinsfile: |-
@@ -81,6 +80,7 @@ objects:
                     git url: "${GIT_SOURCE_URL}", branch: "${GIT_SOURCE_REF}", credentialsId: "fhir-development-${GIT_SOURCE_SECRET}"
                   }
                   stage("Build Jar") {
+                    sh "cd ${CONTEXT_DIR}"
                     sh "mvn -s configuration/settings.xml -DskipTests=true clean install"
                     sh "cp target/*.jar ${APP_NAME}.jar"
                     stash name:"jar", includes:" ${APP_NAME}.jar"
