--- a/fhir-base-container/Dockerfile
+++ b/fhir-base-container/Dockerfile
@@ -10,12 +10,11 @@ USER root
 ENV APP_ROOT=/opt/app-root 
 
 RUN yum -y upgrade \
-     && INSTALL_PKGS="java-1.8.0-openjdk-devel"  \
-     && yum install -y --enablerepo=rhel-server-rhscl-7-rpms --enablerepo=rhel-7-server-optional-rpms $INSTALL_PKGS \
-     && rpm -V $INSTALL_PKGS \
+     && yum -y install java-1.8.0-openjdk-devel  \
      && yum clean all -y \
      && mkdir ${APP_ROOT} ${APP_ROOT}/bin
 
+#     && yum install -y --enablerepo=rhel-server-rhscl-7-rpms --enablerepo=rhel-7-server-optional-rpms $INSTALL_PKGS \
 COPY jolokia.jar ${APP_ROOT}
 COPY run ${APP_ROOT}/bin
 
