--- a/openshift/templates/maven-pipeline.yaml
+++ b/openshift/templates/maven-pipeline.yaml
@@ -65,7 +65,7 @@ objects:
                     git url: "${GIT_SOURCE_URL}", branch: "${GIT_SOURCE_REF}"
                   }
                   stage("Build Jar") {
-                    sh "cd ${CONTEXT_DIR}; mvn -s configuration/settings.xml clean deploy"
+                    sh "cd ${CONTEXT_DIR}; mvn -s ../configuration/settings.xml clean deploy"
                   }
                 }
              }
