--- a/openshift/templates/nodejs-pipeline.yaml
+++ b/openshift/templates/nodejs-pipeline.yaml
@@ -19,10 +19,10 @@ parameters:
   displayName: Source Ref
   required: true
   value: develop
-- name: GIT_SOURCE_SECRET
-  description: The source Secret for the application
-  displayName: Source Secret
-  required: true
+- name: CONTEXT_DIR
+  description: Path within Git project to build; empty for root project directory.
+  displayName: Context Directory
+  required: false
 - description: Github trigger secret.  A difficult to guess string encoded as part of the webhook URL.  Not encrypted.
   displayName: GitHub Webhook Secret
   from: '[a-zA-Z0-9]{40}'
@@ -60,8 +60,7 @@ objects:
       git:
         uri: ${GIT_SOURCE_URL}
         ref: ${GIT_SOURCE_REF}
-      sourceSecret:
-        name: ${GIT_SOURCE_SECRET}
+      contextDir: ${CONTEXT_DIR}
     strategy:
       jenkinsPipelineStrategy:
         jenkinsfile: |-
@@ -75,7 +74,6 @@ objects:
                     project = env.PROJECT_NAME
                   }
                   stage("Checkout") {
-                    //git url: "${GIT_SOURCE_URL}", branch: "${GIT_SOURCE_REF}, credentialsId: ${GIT_SOURCE_SECRET}"
                   }
                 }
 
@@ -122,8 +120,7 @@ objects:
       git:
         uri: ${GIT_SOURCE_URL}
         ref: ${GIT_SOURCE_REF}
-      sourceSecret:
-        name: ${GIT_SOURCE_SECRET}
+      contextDir: ${CONTEXT_DIR}
     strategy:
       dockerStrategy:
         dockerfilePath: Dockerfile
