Added bulk service

--- a/openshift/templates/decisionserver64-pipeline.yaml
+++ b/openshift/templates/decisionserver64-pipeline.yaml
@@ -167,6 +167,9 @@ objects:
             limits:
               cpu: ${CPU_LIMIT}
               memory: ${MEMORY_LIMIT}
+            requests:
+              cpu: ${CPU_REQUEST}
+              memory: ${MEMORY_REQUEST}
         terminationGracePeriodSeconds: 60
     triggers:
     - imageChangeParams:
@@ -261,3 +264,9 @@ parameters:
 - description: POD CPU Limit 
   name: CPU_LIMIT
   value: 750m
+- description: POD Memory Request
+  name: MEMORY_REQUEST
+  value: 256Mi
+- description: POD CPU Request
+  name: CPU_REQUEST
+  value: 100m
