--- a/fhir-patient-service/pom.xml
+++ b/fhir-patient-service/pom.xml
@@ -44,18 +44,20 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-<!-- 
-		<dependency>
+ 
+ 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
-			<version>2.4.0</version>
+			<version>2.6.1</version>
+			<scope>compile</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
-			<version>2.4.0</version>
+			<version>2.6.1</version>
+			<scope>compile</scope>
 		</dependency>
- -->		
  		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator </artifactId>
