--- a/fhir-risk-assessment-bulk-service/pom.xml
+++ b/fhir-risk-assessment-bulk-service/pom.xml
@@ -2,7 +2,6 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  
   <groupId>com.vizuri.fhir</groupId>
   <artifactId>fhir-risk-assessment-bulk-service</artifactId>
   <version>0.0.1-SNAPSHOT</version>
@@ -28,10 +27,10 @@
     </dependencies>
   </dependencyManagement>
   <dependencies>
-     <dependency>
-  		<groupId>com.vizuri.fhir</groupId>
-		<artifactId>fhir-base</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+    <dependency>
+      <groupId>com.vizuri.fhir</groupId>
+      <artifactId>fhir-base</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>javax.inject</groupId>
@@ -49,7 +48,6 @@
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-http-starter</artifactId>
     </dependency>
-
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-servlet-starter</artifactId>
@@ -58,7 +56,6 @@
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-jackson-starter</artifactId>
     </dependency>
-    
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
@@ -67,17 +64,16 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
-    
-   	<dependency>
-		<groupId>ca.uhn.hapi.fhir</groupId>
-		<artifactId>hapi-fhir-base</artifactId>
-		<version>2.2</version>
-	</dependency>
-	<dependency>
-		<groupId>ca.uhn.hapi.fhir</groupId>
-		<artifactId>hapi-fhir-structures-dstu3</artifactId>
-		<version>2.2</version>
-	</dependency>
+    <dependency>
+      <groupId>ca.uhn.hapi.fhir</groupId>
+      <artifactId>hapi-fhir-base</artifactId>
+      <version>2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>ca.uhn.hapi.fhir</groupId>
+      <artifactId>hapi-fhir-structures-dstu3</artifactId>
+      <version>2.2</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -102,6 +98,19 @@
       <groupId>io.fabric8</groupId>
       <artifactId>fabric8-arquillian</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-jsonpath</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-jackson</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-jacksonxml</artifactId>
+      <version>2.18.1.redhat-000021</version>
     </dependency>
   </dependencies>
   <repositories>
@@ -203,21 +212,6 @@
           </execution>
         </executions>
       </plugin>
-      <!--  
-      <plugin>
-        <groupId>io.fabric8</groupId>
-        <artifactId>fabric8-maven-plugin</artifactId>
-        <version>${fabric8.maven.plugin.version}</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>resource</goal>
-              <goal>build</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      -->
     </plugins>
   </build>
 </project>
