--- a/fhir-risk-assessment-bulk-service/src/main/resources/application-openshift.properties
+++ b/fhir-risk-assessment-bulk-service/src/main/resources/application-openshift.properties
@@ -15,3 +15,10 @@ management.port=8081
 # disable all management endpoints except health
 endpoints.enabled = false
 endpoints.health.enabled = true
+
+service.patient.host=${SERVICE_PATIENT_HOST:http://fhir-patient-service-fhir-development.192.168.99.100.nip.io/patient}
+service.observation.host=${SERVICE_OBSERVATION_HOST:http://fhir-observation-service-fhir-development.192.168.99.100.nip.io/observation}
+service.questionnaire.host=${SERVICE_QUESTIONNAIRE_HOST:http://fhir-questionnaireresponse-service-fhir-development.192.168.99.100.nip.io/questionnaireResponse}
+service.riskassessment.heart.host=${SERVICE_RISKASSESSMENT_HEART_HOST:http://fhir-riskassessment-service-fhir-development.192.168.99.100.nip.io/riskAssessment/heartDisease}
+service.riskassessment.framingham.host=${SERVICE_RISKASSESSMENT_FRAMINGHAM_HOST:http://fhir-riskassessment-service-fhir-development.192.168.99.100.nip.io/riskAssessment/framingham}
+service.riskassessment.diabetes.host=${SERVICE_RISKASSESSMENT_DIABETES_HOST:http://fhir-riskassessment-service-fhir-development.192.168.99.100.nip.io/riskAssessment/diabetes}
