--- a/fhir-risk-assessment-bulk-service/src/main/resources/application-openshift.properties
+++ b/fhir-risk-assessment-bulk-service/src/main/resources/application-openshift.properties
@@ -16,9 +16,11 @@ management.port=8081
 endpoints.enabled = false
 endpoints.health.enabled = true
 
-service.patient.host=${SERVICE_PATIENT_HOST:http://fhir-patient-service-fhir-development.192.168.99.100.nip.io/patient}
-service.observation.host=${SERVICE_OBSERVATION_HOST:http://fhir-observation-service-fhir-development.192.168.99.100.nip.io/observation}
-service.questionnaire.host=${SERVICE_QUESTIONNAIRE_HOST:http://fhir-questionnaireresponse-service-fhir-development.192.168.99.100.nip.io/questionnaireResponse}
-service.riskassessment.heart.host=${SERVICE_RISKASSESSMENT_HEART_HOST:http://fhir-riskassessment-service-fhir-development.192.168.99.100.nip.io/riskAssessment/heartDisease}
-service.riskassessment.framingham.host=${SERVICE_RISKASSESSMENT_FRAMINGHAM_HOST:http://fhir-riskassessment-service-fhir-development.192.168.99.100.nip.io/riskAssessment/framingham}
-service.riskassessment.diabetes.host=${SERVICE_RISKASSESSMENT_DIABETES_HOST:http://fhir-riskassessment-service-fhir-development.192.168.99.100.nip.io/riskAssessment/diabetes}
+OCP_WILDCARD_DNS=192.168.99.100.nip.io
+
+service.patient.host=${SERVICE_PATIENT_HOST:http://fhir-patient-service-fhir-development.${OCP_WILDCARD_DNS}/patient}
+service.observation.host=${SERVICE_OBSERVATION_HOST:http://fhir-observation-service-fhir-development.${OCP_WILDCARD_DNS}/observation}
+service.questionnaire.host=${SERVICE_QUESTIONNAIRE_HOST:http://fhir-questionnaireresponse-service-fhir-development.${OCP_WILDCARD_DNS}/questionnaireResponse}
+service.riskassessment.heart.host=${SERVICE_RISKASSESSMENT_HEART_HOST:http://fhir-riskassessment-service-fhir-development.${OCP_WILDCARD_DNS}/riskAssessment/heartDisease}
+service.riskassessment.framingham.host=${SERVICE_RISKASSESSMENT_FRAMINGHAM_HOST:http://fhir-riskassessment-service-fhir-development.${OCP_WILDCARD_DNS}/riskAssessment/framingham}
+service.riskassessment.diabetes.host=${SERVICE_RISKASSESSMENT_DIABETES_HOST:http://fhir-riskassessment-service-fhir-development.${OCP_WILDCARD_DNS}/riskAssessment/diabetes}
