--- a/fhir-patient-upload-service/src/main/resources/application.properties
+++ b/fhir-patient-upload-service/src/main/resources/application.properties
@@ -16,5 +16,5 @@ management.port=8081
 endpoints.enabled = false
 endpoints.health.enabled = true
 
-aws.access.key.id = AKIAI26QYALEIUBPC2AQ
-aws.secret.access.key = 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
+aws.access.key.id = ${AWS_ACCESS_KEY_ID}
+aws.secret.access.key = ${AWS_SECRET_ACCESS_KEY}
