--- a/fhir-patient-service/Jenkinsfile
+++ b/fhir-patient-service/Jenkinsfile
@@ -1,14 +1,14 @@
 #!/usr/bin/groovy
 @Library('github.com/vizuri/openshift-pipeline-templates@master')
 
-echo ">>>> Starting ... "
+println( ">>>> Starting ... " )
 
 node () {
     def utils = new com.vizuri.openshift.Utils()
     utils.helloWorld()
     //utils.addAnnotationToBuild('fabric8.io/foo', 'bar')
 
-   echo ">>>>>  Build Number ${BUILD_NUMBER}"
+   println( ">>>>>  Build Number ${BUILD_NUMBER}")
    def ocp_project
    def image_project
    def app_name="patient-service"
@@ -18,7 +18,7 @@ node () {
    def release_number
    def staging_build_job="fhir-staging/fhir-patient-service-staging"
    
-   echo ">>>>>>  Branch Name:" + BRANCH_NAME
+   println( ">>>>>>  Branch Name:" + BRANCH_NAME)
    
    
    if(BRANCH_NAME.startsWith("release")) {
@@ -47,11 +47,11 @@ node () {
 
 node ('maven') { 
     stage('Checkout') {
-        echo "In checkout"
+        println( "In checkout" )
     	checkout scm
    }
     stage('MavenBuild') {
-        echo "In Build"
+        println( "In Build")
         sh "mvn -Dbuild.number=${release_number} clean install deploy"
         junit 'target/surefire-reports/*.xml'
         
