--- a/fhir-patient-service/Jenkinsfile
+++ b/fhir-patient-service/Jenkinsfile
@@ -1,9 +1,10 @@
 #!/usr/bin/groovy
 @Library('github.com/vizuri/openshift-pipeline-templates@master')
 
-println( ">>>> Starting ... " )
 
 node () {
+
+    println(">>>> Starting")
     def utils = new com.vizuri.openshift.Utils()
     utils.helloWorld()
     //utils.addAnnotationToBuild('fabric8.io/foo', 'bar')
