--- a/fhir-patient-service/Jenkinsfile
+++ b/fhir-patient-service/Jenkinsfile
@@ -3,46 +3,47 @@
 
 
 node () {
-
-    println(">>>> Starting")
-    def utils = new com.vizuri.openshift.Utils()
-    utils.helloWorld()
-    //utils.addAnnotationToBuild('fabric8.io/foo', 'bar')
-
-   println( ">>>>>  Build Number ${BUILD_NUMBER}")
-   def ocp_project
-   def image_project
-   def app_name="patient-service"
-   def image_tag="v1.${BUILD_NUMBER}"
-   
-   def snapshot_release_number = "1.0-SNAPSHOT"
-   def release_number
-   def staging_build_job="fhir-staging/fhir-patient-service-staging"
-   
-   println( ">>>>>>  Branch Name:" + BRANCH_NAME)
-   
-   
-   if(BRANCH_NAME.startsWith("release")) {
-	   //def (branch_name, branch_release_number) = BRANCH_NAME.tokenize( '/' )
-	   def tokens = BRANCH_NAME.tokenize( '/' )
-	   branch_name = tokens[0]
-	   branch_release_number = tokens[1]
-   
-	   image_project="fhir"
-	   ocp_project="fhir-test"
+    stage('Setup') {
+	    println(">>>> Starting")
+	    def utils = new com.vizuri.openshift.Utils()
+	    utils.helloWorld()
+	    //utils.addAnnotationToBuild('fabric8.io/foo', 'bar')
+	
+	   println( ">>>>>  Build Number ${BUILD_NUMBER}")
+	   def ocp_project
+	   def image_project
+	   def app_name="patient-service"
+	   def image_tag="v1.${BUILD_NUMBER}"
 	   
-	   release_number = branch_release_number
+	   def snapshot_release_number = "1.0-SNAPSHOT"
+	   def release_number
+	   def staging_build_job="fhir-staging/fhir-patient-service-staging"
 	   
-	   stage('Confirm Deploy?') {
-	       milestone 1
-	           input message: "Do you want to deploy release ${BRANCH_NAME} to test?" 
+	   println( ">>>>>>  Branch Name:" + BRANCH_NAME)
+	   
+	   
+	   if(BRANCH_NAME.startsWith("release")) {
+		   //def (branch_name, branch_release_number) = BRANCH_NAME.tokenize( '/' )
+		   def tokens = BRANCH_NAME.tokenize( '/' )
+		   branch_name = tokens[0]
+		   branch_release_number = tokens[1]
+	   
+		   image_project="fhir"
+		   ocp_project="fhir-test"
+		   
+		   release_number = branch_release_number
+		   
+		   stage('Confirm Deploy?') {
+		       milestone 1
+		           input message: "Do you want to deploy release ${BRANCH_NAME} to test?" 
+		   }
 	   }
-   }
-   else {
-       release_number = snapshot_release_number
-	   image_project="fhir-snapshot"
-	   ocp_project="fhir-development"
-   }
+	   else {
+	       release_number = snapshot_release_number
+		   image_project="fhir-snapshot"
+		   ocp_project="fhir-development"
+	   }
+	}
 }
 
 
