--- a/fhir-patient-service/Jenkinsfile
+++ b/fhir-patient-service/Jenkinsfile
@@ -6,7 +6,7 @@ def utils = new com.vizuri.openshift.Utils()
 utils.helloWorld()
 //utils.addAnnotationToBuild('fabric8.io/foo', 'bar')
 
-println( ">>>>>  Build Number ${BUILD_NUMBER}")
+echo( ">>>>>  Build Number ${BUILD_NUMBER}")
 def ocp_project
 def image_project
 def app_name="patient-service"
@@ -15,7 +15,7 @@ def image_tag="v1.${BUILD_NUMBER}"
 def snapshot_release_number = "1.0-SNAPSHOT"
 def release_number
 def staging_build_job="fhir-staging/fhir-patient-service-staging"
-println( ">>>>>>  Branch Name:" + BRANCH_NAME)
+echo( ">>>>>>  Branch Name:" + BRANCH_NAME)
    
    
 if(BRANCH_NAME.startsWith("release")) {
@@ -40,23 +40,23 @@ else {
    ocp_project="fhir-development"
 }
 
-   node('maven') {	
-	   stage('Checkout') {
-	        println( "In checkout" )
-	    	checkout scm
-	   }
-	    stage('MavenBuild') {
-	        println( "In Build")
-	        sh "mvn -Dbuild.number=${release_number} clean install deploy"
-	        junit 'target/surefire-reports/*.xml'
-	        
-	       // step([$class: 'XUnitBuilder',
-	    	//	thresholds: [[$class: 'FailedThreshold', unstableThreshold: '1']],
-	    	//	tools: [[$class: 'JUnitType', pattern: 'target/surefire-reports/*.xml']]])
-	        
-	        stash includes: 'target/*.jar', name: 'artifacts'
-	    }
-	}
+node('maven') {	
+   stage('Checkout') {
+        echo( "In checkout" )
+    	checkout scm
+   }
+    stage('MavenBuild') {
+        echo( "In Build")
+        sh "mvn -Dbuild.number=${release_number} clean install deploy"
+        junit 'target/surefire-reports/*.xml'
+        
+       // step([$class: 'XUnitBuilder',
+    	//	thresholds: [[$class: 'FailedThreshold', unstableThreshold: '1']],
+    	//	tools: [[$class: 'JUnitType', pattern: 'target/surefire-reports/*.xml']]])
+        
+        stash includes: 'target/*.jar', name: 'artifacts'
+    }
+}
 //node () { 
 //    stage('DockerBuild') {
 //        dir('.') {
