--- a/fhir-patient-service/Jenkinsfile
+++ b/fhir-patient-service/Jenkinsfile
@@ -1,12 +1,12 @@
 #!/usr/bin/groovy
 @Library('github.com/vizuri/openshift-pipeline-templates@master')
 
-echo(">>>> Starting")
+echo ">>>> Starting"
 def utils = new com.vizuri.openshift.Utils()
 utils.helloWorld()
 //utils.addAnnotationToBuild('fabric8.io/foo', 'bar')
 
-echo( ">>>>>  Build Number ${BUILD_NUMBER}")
+echo ">>>>>  Build Number ${BUILD_NUMBER}"
 def ocp_project
 def image_project
 def app_name="patient-service"
@@ -15,7 +15,8 @@ def image_tag="v1.${BUILD_NUMBER}"
 def snapshot_release_number = "1.0-SNAPSHOT"
 def release_number
 def staging_build_job="fhir-staging/fhir-patient-service-staging"
-echo( ">>>>>>  Branch Name:" + BRANCH_NAME)
+
+echo ">>>>>>  Branch Name: " + BRANCH_NAME
    
    
 if(BRANCH_NAME.startsWith("release")) {
@@ -42,11 +43,11 @@ else {
 
 node('maven') {	
    stage('Checkout') {
-        echo( "In checkout" )
+        echo "In checkout" 
     	checkout scm
    }
     stage('MavenBuild') {
-        echo( "In Build")
+        echo "In Build"
         sh "mvn -Dbuild.number=${release_number} clean install deploy"
         junit 'target/surefire-reports/*.xml'
         
