--- a/fhir-patient-service/Jenkinsfile
+++ b/fhir-patient-service/Jenkinsfile
@@ -1,12 +1,12 @@
 #!/usr/bin/groovy
 @Library('github.com/vizuri/openshift-pipeline-templates@master')
 
-echo ">>>> Starting"
+println ">>>> Starting"
 def utils = new com.vizuri.openshift.Utils()
 utils.helloWorld()
 //utils.addAnnotationToBuild('fabric8.io/foo', 'bar')
 
-echo ">>>>>  Build Number ${BUILD_NUMBER}"
+println ">>>>>  Build Number ${BUILD_NUMBER}"
 def ocp_project
 def image_project
 def app_name="patient-service"
