--- a/fhir-patient-service/Jenkinsfile
+++ b/fhir-patient-service/Jenkinsfile
@@ -1,22 +1,22 @@
 #!/usr/bin/groovy
-@Library('github.com/vizuri/openshift-pipeline-templates@master')
+@Library('github.com/vizuri/openshift-pipeline-templates@master');
 
-println ">>>> Starting"
-def utils = new com.vizuri.openshift.Utils()
-utils.helloWorld()
+println ">>>> Starting";
+def utils = new com.vizuri.openshift.Utils();
+utils.helloWorld();
 //utils.addAnnotationToBuild('fabric8.io/foo', 'bar')
 
-println ">>>>>  Build Number ${BUILD_NUMBER}"
-def ocp_project
-def image_project
-def app_name="patient-service"
-def image_tag="v1.${BUILD_NUMBER}"
+println ">>>>>  Build Number ${BUILD_NUMBER}";
+def ocp_project;
+def image_project;
+def app_name="patient-service";
+def image_tag="v1.${BUILD_NUMBER}";
    
-def snapshot_release_number = "1.0-SNAPSHOT"
-def release_number
-def staging_build_job="fhir-staging/fhir-patient-service-staging"
+def snapshot_release_number = "1.0-SNAPSHOT";
+def release_number;
+def staging_build_job="fhir-staging/fhir-patient-service-staging";
 
-echo ">>>>>>  Branch Name: " + BRANCH_NAME
+echo ">>>>>>  Branch Name: " + BRANCH_NAME;
    
    
 if(BRANCH_NAME.startsWith("release")) {
