--- a/fhir-parent/Jenkinsfile
+++ b/fhir-parent/Jenkinsfile
@@ -49,7 +49,7 @@ node('maven') {
     stage('MavenBuild') {
         echo "In Build"
         sh "mvn -s configuration/settings.xml -Dbuild.number=${release_number} -f fhir-parent clean install deploy"
-        junit 'target/surefire-reports/*.xml'
+        //junit 'target/surefire-reports/*.xml'
         
        // step([$class: 'XUnitBuilder',
     	//	thresholds: [[$class: 'FailedThreshold', unstableThreshold: '1']],
