--- a/fhir-patient-service/Jenkinsfile
+++ b/fhir-patient-service/Jenkinsfile
@@ -48,14 +48,14 @@ node('maven') {
    }
     stage('MavenBuild') {
         echo "In Build"
-        sh "mvn -Dbuild.number=${release_number} -f fhir-patient-service clean install deploy"
+        sh "mvn -s configuration/settings.xml -Dbuild.number=${release_number} -f fhir-patient-service clean install deploy"
         junit 'target/surefire-reports/*.xml'
         
        // step([$class: 'XUnitBuilder',
     	//	thresholds: [[$class: 'FailedThreshold', unstableThreshold: '1']],
     	//	tools: [[$class: 'JUnitType', pattern: 'target/surefire-reports/*.xml']]])
         
-        stash includes: 'target/*.jar', name: 'artifacts'
+        stash includes: 'fhir-patient-service/target/*.jar', name: 'artifacts'
     }
 }
 //node () { 
