--- a/fhir-patient-service/Jenkinsfile
+++ b/fhir-patient-service/Jenkinsfile
@@ -48,8 +48,8 @@ node('maven') {
    }
     stage('MavenBuild') {
         echo "In Build"
-        sh "mvn -s configuration/settings.xml -Dbuild.number=${release_number} -f fhir-patient-service clean install deploy"
-        junit 'target/surefire-reports/*.xml'
+        sh "mvn -DskipTests -s configuration/settings.xml -Dbuild.number=${release_number} -f fhir-patient-service clean install deploy"
+        //junit 'target/surefire-reports/*.xml'
         
        // step([$class: 'XUnitBuilder',
     	//	thresholds: [[$class: 'FailedThreshold', unstableThreshold: '1']],
