--- a/fhir-patient-service/Jenkinsfile
+++ b/fhir-patient-service/Jenkinsfile
@@ -64,6 +64,7 @@ node('maven') {
       sonar.projectName=$pom.name
       sonar.projectVersion=$pom.version
       sonar.genericcoverage.reportPaths=fhir-patient-service/target/surefire-reports/TEST-jenkins.plugins.jsonHelper.FromJsonStepTest.xml
+	  sonar.java.binaries=fhir-patient-service/target/classes
       sonar.sources=fhir-patient-service/src/main/java"""
       archive 'sonar-project.properties'
 
