--- a/fhir-patient-service/Jenkinsfile
+++ b/fhir-patient-service/Jenkinsfile
@@ -66,7 +66,7 @@ node('maven') {
       sonar.projectName=$pom.name
       sonar.projectVersion=$pom.version
 	  sonar.java.binaries=fhir-patient-service/target/classes
-	  sonar.genericcoverage.reportPaths=fhir-patient-service/target/surefire-reports/TEST-*.xml
+	  sonar.genericcoverage.reportPaths=fhir-patient-service/target/surefire-reports
       sonar.sources=fhir-patient-service/src/main/java"""
       archive 'sonar-project.properties'
 
