--- a/fhir-patient-service/Jenkinsfile
+++ b/fhir-patient-service/Jenkinsfile
@@ -71,6 +71,7 @@ node('maven') {
       sonar.sources=fhir-patient-service/src/main/java"""
       archive 'sonar-project.properties'
 
+      def scannerHome` = tool 'sonar';
       withSonarQubeEnv('sonar') {
         sh "${scannerHome}/bin/sonar-scanner"
       }
