--- a/fhir-patient-service/Jenkinsfile
+++ b/fhir-patient-service/Jenkinsfile
@@ -96,18 +96,26 @@ node('maven') {
 //		  }
 //	  }
     }
-    stage("Quality Gate") {
-      steps {
-        timeout(time: 1, unit: 'HOURS') {
-           // Parameter indicates whether to set pipeline to UNSTABLE if Quality Gate fails
-           // true = set pipeline to UNSTABLE, false = don't
-           // Requires SonarQube Scanner for Jenkins 2.7+
-		   withSonarQubeEnv('sonar') {
-	          waitForQualityGate abortPipeline: true
-		   }
-        }
-      }
-    }
+	
+	
+	stage("Quality Gate"){
+		timeout(time: 1, unit: 'HOURS') {
+			def qg = waitForQualityGate()
+			if (qg.status != 'OK') {
+				error "Pipeline aborted due to quality gate failure: ${qg.status}"
+			}
+		}
+	}
+//    stage("Quality Gate") {
+//      steps {
+//        timeout(time: 1, unit: 'HOURS') {
+//           // Parameter indicates whether to set pipeline to UNSTABLE if Quality Gate fails
+//           // true = set pipeline to UNSTABLE, false = don't
+//           // Requires SonarQube Scanner for Jenkins 2.7+
+//	       waitForQualityGate abortPipeline: true
+//        }
+//      }
+//    }
 }
 //node () { 
 //    stage('DockerBuild') {
