--- a/fhir-patient-service/Jenkinsfile
+++ b/fhir-patient-service/Jenkinsfile
@@ -98,42 +98,45 @@ node('maven') {
     }
 	
 	
-//	stage("Quality Gate"){
-//		timeout(time: 1, unit: 'HOURS') {
-//			def qg = waitForQualityGate()
-//			if (qg.status != 'OK') {
-//				error "Pipeline aborted due to quality gate failure: ${qg.status}"
-//			}
-//		}
-//	}
-	
-	
-	
-	stage("Quality Gate") {
-		steps {
-			 script {
-					while(true){
-						sh "sleep 2"
-						def url="http://jenkins:8080/job/${env.JOB_NAME.replaceAll('/','/job/')}/lastBuild/consoleText";
-						def sonarId = sh script: "wget -qO- --content-on-error --no-proxy --auth-no-challenge --http-user=${CRED_USR} --http-password=${CRED_PSW} '${url}'  | grep 'More about the report processing' | head -n1 ",returnStdout:true
-						sonarId = sonarId.substring(sonarId.indexOf("=")+1)
-						echo "sonarId ${sonarId}"
-						def sonarUrl = "http://sonarqube:9000/sonar/api/ce/task?id=${sonarId}"
-						def sonarStatus = sh script: "wget -qO- '${sonarUrl}' --no-proxy --content-on-error | jq -r '.task' | jq -r '.status' ",returnStdout:true
-						echo "Sonar status ... ${sonarStatus}"
-						if(sonarStatus.trim() == "SUCCESS"){
-							echo "BREAK";
-							break;
-						}
-						if(sonarStatus.trim() == "FAILED "){
-							echo "FAILED"
-							currentBuild.result = 'FAILED'
-							break;
-						}
-					}
-				}
+	stage("Quality Gate"){
+		timeout(time: 1, unit: 'HOURS') {
+			def qg = waitForQualityGate()
+			if (qg.status != 'OK') {
+				error "Pipeline aborted due to quality gate failure: ${qg.status}"
 			}
 		}
+	}
+	
+	
+	
+//	stage("Quality Gate") {
+//		steps {
+//			 script {
+//					while(true){
+//						sh "sleep 2"
+//						def url="http://jenkins:8080/job/${env.JOB_NAME.replaceAll('/','/job/')}/lastBuild/consoleText";
+//						def sonarId = sh script: "wget -qO- --content-on-error --no-proxy --auth-no-challenge --http-user=${CRED_USR} --http-password=${CRED_PSW} '${url}'  | grep 'More about the report processing' | head -n1 ",returnStdout:true
+//						sonarId = sonarId.substring(sonarId.indexOf("=")+1)
+//						echo "sonarId ${sonarId}"
+//						def sonarUrl = "http://sonarqube:9000/sonar/api/ce/task?id=${sonarId}"
+//						def sonarStatus = sh script: "wget -qO- '${sonarUrl}' --no-proxy --content-on-error | jq -r '.task' | jq -r '.status' ",returnStdout:true
+//						echo "Sonar status ... ${sonarStatus}"
+//						if(sonarStatus.trim() == "SUCCESS"){
+//							echo "BREAK";
+//							break;
+//						}
+//						if(sonarStatus.trim() == "FAILED "){
+//							echo "FAILED"
+//							currentBuild.result = 'FAILED'
+//							break;
+//						}
+//					}
+//				}
+//			}
+//		}
+		
+		
+		
 //    stage("Quality Gate") {
 //      steps {
 //        timeout(time: 1, unit: 'HOURS') {
